# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
headers/: chip8.h
src/: chip8.cpp
